@@ -2209,9 +2209,9 @@
           <TD>Lower and upper limits of the illuminated area readout in microns divided by 
             100.&nbsp; When set, this range of illuminated area will be mapped internally to 
             intensities of 0.1 to 0.9, thus preventing the program from seeing out-of-range 
-            intensity values.&nbsp; There is no default mapping.&nbsp; If this property is added, it 
+            intensity values outside of LM mode and negative intensity values in LM mode.&nbsp; There is no default mapping.&nbsp; If this property is added, it 
             will invalidate existing beam and spot intensity calibrations and the crossover 
-            calibration.</TD>
+            calibration.  Limits of -0.5 and 2.5 should be adequate.</TD>
         </TR>
         <TR>
           <TD>C2ApertureSizes</TD>
